[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/components/config_slider.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/controllers/control_net_configs.gd" type="Script" id=2]
[ext_resource path="res://ui/components/smart_option_button.tscn" type="PackedScene" id=3]

[node name="ControlNetConfigs" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="Weight" parent="." instance=ExtResource( 1 )]
margin_right = 211.0
margin_bottom = 30.0
text = "WEIGHT"
max_value = 2.0
step = 0.1
allow_decimals = true
requieres_flag = false

[node name="GuidanceStart" parent="." groups=["advanced_ui"] instance=ExtResource( 1 )]
margin_top = 34.0
margin_right = 211.0
margin_bottom = 64.0
text = "GUIDANCE_START"
max_value = 1.0
step = 0.1
default_value = 0.0
allow_decimals = true
requieres_flag = false

[node name="GuidanceEnd" parent="." groups=["advanced_ui"] instance=ExtResource( 1 )]
margin_top = 68.0
margin_right = 211.0
margin_bottom = 98.0
text = "GUIDANCE_END"
max_value = 1.0
step = 0.1
allow_decimals = true
requieres_flag = false

[node name="ControlnetMode" parent="." instance=ExtResource( 3 )]
margin_top = 102.0
margin_right = 211.0
margin_bottom = 128.0
text = "CONTROLNET_MODE"
requieres_flag = false
